--- a/docs/docs-ref-autogen/excel/excel.commentcollection.yml
+++ b/docs/docs-ref-autogen/excel/excel.commentcollection.yml
@@ -30,7 +30,7 @@ items:
       - excel.Excel.CommentCollection.toJSON
   - uid: excel.Excel.CommentCollection.add
     summary: |-
-      使用给定单元格上的给定内容创建新批注。 如果`InvalidArgument`提供的范围大于一个单元格, 则会引发错误。
+      在给定单元格上创建具有给定内容的新注释 (注释线程)。 如果`InvalidArgument`提供的范围大于一个单元格, 则会引发错误。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -68,12 +68,12 @@ items:
           type:
             - Range | string
         - id: contentType
-          description: 可选。 注释内容的类型。
+          description: 可选。 注释内容的类型
           type:
             - excel.Excel.ContentType
   - uid: excel.Excel.CommentCollection.add_1
     summary: |-
-      使用给定单元格上的给定内容创建新批注。 如果`InvalidArgument`提供的范围大于一个单元格, 则会引发错误。
+      在给定单元格上创建具有给定内容的新注释 (注释线程)。 如果`InvalidArgument`提供的范围大于一个单元格, 则会引发错误。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -98,7 +98,7 @@ items:
           type:
             - Range | string
         - id: contentTypeString
-          description: 可选。 注释内容的类型。
+          description: 可选。 注释内容的类型
           type:
             - '"Plain"'
   - uid: excel.Excel.CommentCollection.context
@@ -194,12 +194,12 @@ items:
         description: ''
       parameters:
         - id: cellAddress
-          description: '批注所在的单元格。 它可以是一个 Range 对象或一个字符串。 如果是字符串, 则必须包含完整的地址, 包括工作表名称。'
+          description: '批注所在的单元格。 它可以是一个 Range 对象或一个字符串。 如果是字符串, 则必须包含完整的地址, 包括工作表名称。 如果`InvalidArgument`提供的范围大于一个单元格, 则会引发错误。'
           type:
             - Range | string
   - uid: excel.Excel.CommentCollection.getItemByReplyId
     summary: |-
-      从具有相应回复 ID 的集合中获取批注。
+      获取与集合中的回复 ID 相关的批注。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
