--- a/docs/docs-ref-autogen/excel/excel.datavalidation.yml
+++ b/docs/docs-ref-autogen/excel/excel.datavalidation.yml
@@ -218,7 +218,7 @@ items:
             - '{ select?: string; expand?: string; }'
   - uid: excel.Excel.DataValidation.prompt
     summary: |-
-      当用户选择单元格时提示。 必须`DataValidationPrompt`将该对象设置为 JSON 对象 (使用`x.prompt = {...}` , 而不是`x.prompt.message = ...`<!-- -->).
+      当用户选择单元格时提示。
 
       \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: prompt
