--- a/docs/docs-ref-autogen/excel/excel.eventtype.yml
+++ b/docs/docs-ref-autogen/excel/excel.eventtype.yml
@@ -35,6 +35,7 @@ items:
       - excel.Excel.EventType.worksheetDeleted
       - excel.Excel.EventType.worksheetFiltered
       - excel.Excel.EventType.worksheetFormatChanged
+      - excel.Excel.EventType.worksheetRowHiddenChanged
       - excel.Excel.EventType.worksheetRowSorted
       - excel.Excel.EventType.worksheetSelectionChanged
       - excel.Excel.EventType.worksheetSingleClicked
@@ -245,6 +246,14 @@ items:
       - typeScript
     type: field
     numericValue: '"WorksheetFormatChanged"'
+  - uid: excel.Excel.EventType.worksheetRowHiddenChanged
+    summary: 'WorksheetRowHiddenChanged 表示在工作表上注册的事件的类型, 并在更改行的隐藏状态时发生。'
+    name: worksheetRowHiddenChanged
+    fullName: worksheetRowHiddenChanged
+    langs:
+      - typeScript
+    type: field
+    numericValue: '"WorksheetRowHiddenChanged"'
   - uid: excel.Excel.EventType.worksheetRowSorted
     summary: 'WorksheetRowSorted 表示在工作表上注册的事件的类型, 并在对行进行排序时发生。'
     name: worksheetRowSorted
