--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentcollectionloadoptions.yml
@@ -33,7 +33,7 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.CommentCollectionLoadOptions.authorEmail
     summary: |-
-      对于集合中的每个项目: 获取注释的作者电子邮件。
+      对于集合中的每一项: 获取批注作者的电子邮件。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -49,7 +49,7 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.CommentCollectionLoadOptions.authorName
     summary: |-
-      对于集合中的每个项目: 获取注释的作者姓名。
+      对于集合中的每一项: 获取批注作者的姓名。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -65,7 +65,7 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.CommentCollectionLoadOptions.content
     summary: |-
-      对于集合中的每一项: 获取或设置内容。
+      对于集合中的每一项: 获取或设置批注的内容。 字符串为纯文本。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -81,7 +81,7 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.CommentCollectionLoadOptions.creationDate
     summary: |-
-      对于集合中的每个项目: 获取注释的创建时间。 如果批注是从注释转换而来的，则返回 null，因为在这种情况下，批注没有创建日期。
+      对于集合中的每一项: 获取注释的创建时间。 如果批注是从备注转换而来的，则返回 null，因为批注没有创建日期。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
