--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentreplycollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentreplycollectionloadoptions.yml
@@ -33,7 +33,7 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.CommentReplyCollectionLoadOptions.authorEmail
     summary: |-
-      对于集合中的每一项: 获取批注答复的作者电子邮件。
+      对于集合中的每一项: 获取批注答复作者的电子邮件。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -49,7 +49,7 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.CommentReplyCollectionLoadOptions.authorName
     summary: |-
-      对于集合中的每一项: 获取批注答复的作者姓名。
+      对于集合中的每一项: 获取批注答复作者的姓名。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -65,7 +65,7 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.CommentReplyCollectionLoadOptions.content
     summary: |-
-      对于集合中的每一项: 获取或设置内容。
+      对于集合中的每一项: 获取或设置批注答复的内容。 字符串为纯文本。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
