--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentreplyloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentreplyloadoptions.yml
@@ -65,7 +65,7 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.CommentReplyLoadOptions.content
     summary: |-
-      获取或设置内容。
+      获取或设置批注回复的内容。 字符串为纯文本。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
