--- a/docs/docs-ref-autogen/excel/excel.interfaces.rangedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.rangedata.yml
@@ -34,6 +34,7 @@ items:
       - excel.Excel.Interfaces.RangeData.rowCount
       - excel.Excel.Interfaces.RangeData.rowHidden
       - excel.Excel.Interfaces.RangeData.rowIndex
+      - excel.Excel.Interfaces.RangeData.savedAsArray
       - excel.Excel.Interfaces.RangeData.style
       - excel.Excel.Interfaces.RangeData.text
       - excel.Excel.Interfaces.RangeData.top
@@ -102,7 +103,7 @@ items:
           - number
   - uid: excel.Excel.Interfaces.RangeData.columnHidden
     summary: |-
-      表示当前区域中的所有列是否隐藏。
+      表示当前 range 的所有列均已隐藏。
 
       \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnHidden
@@ -207,7 +208,7 @@ items:
           - 'any[][]'
   - uid: excel.Excel.Interfaces.RangeData.formulasR1C1
     summary: |-
-      表示采用 R1C1 样式表示法的公式。 将公式设置为区域时, value 参数可以是单个值 (字符串), 也可以是二维数组。 如果参数是单个值, 它将应用于区域中的所有单元格。
+      表示采用 R1C1 表示法的公式。 将公式设置为区域时, value 参数可以是单个值 (字符串), 也可以是二维数组。 如果参数是单个值, 它将应用于区域中的所有单元格。
 
       \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulasR1C1
@@ -238,7 +239,7 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.RangeData.height
     summary: |-
-      返回以磅为单位的距离, 100 以磅为单位, 从区域的上边缘到区域的下边缘之间的距离 (以磅为单位)。 只读。
+      返回从区域的上边缘到区域的下边缘的 100％ 缩放的距离（以磅为单位）。 只读。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -314,7 +315,7 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.RangeData.left
     summary: |-
-      返回以磅为单位的距离, 以磅为单位, 从工作表左边缘到区域左边缘的 100% 缩放。 只读。
+      返回从工作表的左边缘到区域的左边缘的 100％ 缩放的距离（以磅为单位）。 只读。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -390,7 +391,7 @@ items:
           - number
   - uid: excel.Excel.Interfaces.RangeData.rowHidden
     summary: |-
-      表示当前区域中的所有行是否隐藏。
+      表示当前 range 的所有行均已隐藏。
 
       \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowHidden
@@ -418,6 +419,22 @@ items:
       return:
         type:
           - number
+  - uid: excel.Excel.Interfaces.RangeData.savedAsArray
+    summary: |-
+      表示是否将所有单元格都保存为数组公式。 如果所有单元格都将保存为数组, 则返回 true; 如果所有单元格不保存为数组公式, 则返回 false。 如果有混合的单元格, 且不能保存为数组公式, 则返回 null。
+
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: savedAsArray
+    fullName: savedAsArray
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'savedAsArray?: boolean;'
+      return:
+        type:
+          - boolean
   - uid: excel.Excel.Interfaces.RangeData.style
     summary: |-
       表示当前区域的样式。 如果单元格的样式不一致, 则将返回 null。 对于自定义样式, 将返回样式名称。 对于内置样式, 将返回一个表示 BuiltInStyle 枚举中的值的字符串。
@@ -450,7 +467,7 @@ items:
           - 'string[][]'
   - uid: excel.Excel.Interfaces.RangeData.top
     summary: |-
-      返回以磅为单位的距离, 以磅为单位, 从工作表的上边缘到区域的上边缘之间的 100% 缩放。 只读。
+      返回从工作表的上边缘到区域的上边缘的 100％ 缩放的距离（以磅为单位）。 只读。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -496,7 +513,7 @@ items:
           - 'Excel.RangeValueType[][]'
   - uid: excel.Excel.Interfaces.RangeData.width
     summary: |-
-      返回以磅为单位的距离, 以磅为单位, 从区域的左边缘到范围的右边缘之间的 100% 缩放。 只读。
+      返回从区域的左边缘到区域的右边缘的 100％ 缩放的距离（以磅为单位）。 只读。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
