--- a/docs/docs-ref-autogen/excel/excel.interfaces.sliceritemdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.sliceritemdata.yml
@@ -17,7 +17,7 @@ items:
     summary: |-
       如果切片器项包含数据，则为 True。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: hasData
     fullName: hasData
@@ -33,7 +33,7 @@ items:
     summary: |-
       如果选择了切片器项，则为 True。 设置此值不会清除其他 SlicerItems 的选定状态。 默认情况下, 如果仅选择了切片器项目, 则取消选择该项目时, 将会选择所有项目。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: isSelected
     fullName: isSelected
@@ -49,7 +49,7 @@ items:
     summary: |-
       表示代表切片器项的唯一值。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: key
     fullName: key
@@ -63,9 +63,9 @@ items:
           - string
   - uid: excel.Excel.Interfaces.SlicerItemData.name
     summary: |-
-      表示 UI 上显示的值。
+      代表 UI 中显示的标题。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: name
     fullName: name
