--- a/docs/docs-ref-autogen/excel/excel.interfaces.tabledata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.tabledata.yml
@@ -236,7 +236,7 @@ items:
           - excel.Excel.Interfaces.TableSortData
   - uid: excel.Excel.Interfaces.TableData.style
     summary: |-
-      表示表格样式的常量值。 可能的值是：TableStyleLight1 through TableStyleLight21、TableStyleMedium1 through TableStyleMedium28、TableStyleStyleDark1 through TableStyleStyleDark11。 还可以指定工作簿中显示的用户定义的自定义样式。
+      表示表格样式的常量值。 可能的值为: "TableStyleLight1" 到 "TableStyleLight21"、"TableStyleMedium1" 通过 "TableStyleMedium28"、"TableStyleStyleDark1" 到 "TableStyleStyleDark11"。 还可以指定工作簿中显示的用户定义的自定义样式。
 
       \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: style
