--- a/docs/docs-ref-autogen/excel/excel.interfaces.tableupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.tableupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: excel.Excel.Interfaces.TableUpdateData
-    summary: '一个用于更新 Table 对象上的数据的接口, 可用于 "table。 set (<!-- -->{ ... }<!-- -->)".'
+    summary: '一个用于更新 Table 对象上的数据的接口, 可用于 "table. set (<!-- -->{ ... }<!-- -->)".'
     name: Excel.Interfaces.TableUpdateData
     fullName: Excel.Interfaces.TableUpdateData
     langs:
@@ -140,7 +140,7 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.TableUpdateData.style
     summary: |-
-      表示表格样式的常量值。 可能的值是：TableStyleLight1 through TableStyleLight21、TableStyleMedium1 through TableStyleMedium28、TableStyleStyleDark1 through TableStyleStyleDark11。 还可以指定工作簿中显示的用户定义的自定义样式。
+      表示表格样式的常量值。 可能的值为: "TableStyleLight1" 到 "TableStyleLight21"、"TableStyleMedium1" 通过 "TableStyleMedium28"、"TableStyleStyleDark1" 到 "TableStyleStyleDark11"。 还可以指定工作簿中显示的用户定义的自定义样式。
 
       \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: style
