--- a/docs/docs-ref-autogen/excel/excel.comment.yml
+++ b/docs/docs-ref-autogen/excel/excel.comment.yml
@@ -64,7 +64,7 @@ items:
           - string
   - uid: excel.Excel.Comment.content
     summary: |-
-      获取或设置批注的内容。
+      获取或设置批注的内容。 字符串为纯文本。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
