--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentreplydata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentreplydata.yml
@@ -48,7 +48,7 @@ items:
           - string
   - uid: excel.Excel.Interfaces.CommentReplyData.content
     summary: |-
-      获取或设置内容。
+      获取或设置批注回复的内容。 字符串为纯文本。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
