--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentreplyupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentreplyupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: excel.Excel.Interfaces.CommentReplyUpdateData
-    summary: '一个用于更新 CommentReply 对象上的数据的接口, 可用于 "CommentReply (<!-- -->{ ... }<!-- -->)".'
+    summary: '一个用于更新 CommentReply 对象上的数据的接口, 可用于 "commentReply (<!-- -->{ ... }<!-- -->)".'
     name: Excel.Interfaces.CommentReplyUpdateData
     fullName: Excel.Interfaces.CommentReplyUpdateData
     langs:
@@ -12,9 +12,9 @@ items:
       - excel.Excel.Interfaces.CommentReplyUpdateData.content
   - uid: excel.Excel.Interfaces.CommentReplyUpdateData.content
     summary: |-
-      获取或设置内容。
+      获取或设置批注回复的内容。 字符串为纯文本。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: content
     fullName: content
