--- a/docs/docs-ref-autogen/excel/excel.interfaces.rangecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.rangecollectionloadoptions.yml
@@ -34,6 +34,7 @@ items:
       - excel.Excel.Interfaces.RangeCollectionLoadOptions.rowCount
       - excel.Excel.Interfaces.RangeCollectionLoadOptions.rowHidden
       - excel.Excel.Interfaces.RangeCollectionLoadOptions.rowIndex
+      - excel.Excel.Interfaces.RangeCollectionLoadOptions.savedAsArray
       - excel.Excel.Interfaces.RangeCollectionLoadOptions.style
       - excel.Excel.Interfaces.RangeCollectionLoadOptions.text
       - excel.Excel.Interfaces.RangeCollectionLoadOptions.top
@@ -412,6 +413,22 @@ items:
     type: property
     syntax:
       content: 'rowIndex?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.RangeCollectionLoadOptions.savedAsArray
+    summary: |-
+      对于集合中的每一项: 表示是否将所有单元格都保存为数组公式。 如果所有单元格都将保存为数组, 则返回 true; 如果所有单元格不保存为数组公式, 则返回 false。 如果有混合的单元格, 且不能保存为数组公式, 则返回 null。
+
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: savedAsArray
+    fullName: savedAsArray
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'savedAsArray?: boolean;'
       return:
         type:
           - boolean
