--- a/docs/docs-ref-autogen/excel/excel.interfaces.slicercollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.slicercollectionloadoptions.yml
@@ -88,7 +88,7 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.SlicerCollectionLoadOptions.isFilterCleared
     summary: |-
-      对于集合中的每个项目: 如果清除当前在切片器上应用的所有筛选器, 则为 True。
+      对于集合中的每一项: 如果清除当前应用于切片器上的所有筛选器, 则为 True。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -136,7 +136,7 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.SlicerCollectionLoadOptions.nameInFormula
     summary: |-
-      对于集合中的每一项: 代表公式中使用的名称。
+      对于集合中的每一项: 代表在公式中使用的切片器名称。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -168,7 +168,7 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.SlicerCollectionLoadOptions.style
     summary: |-
-      对于集合中的每一项: 表示切片器样式的常量值。 可能的值为：SlicerStyleLight1 through SlicerStyleLight6、TableStyleOther1 through TableStyleOther2、 SlicerStyleDark1 through SlicerStyleDark6。 还可以指定工作簿中显示的用户定义的自定义样式。
+      对于集合中的每一项: 表示切片器样式的常量值。 可能的值为: "SlicerStyleLight1" 到 "SlicerStyleLight6"、"TableStyleOther1" 通过 "TableStyleOther2"、"SlicerStyleDark1" 到 "SlicerStyleDark6"。 还可以指定工作簿中显示的用户定义的自定义样式。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
