--- a/docs/docs-ref-autogen/excel/excel.interfaces.slicerupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.slicerupdatedata.yml
@@ -85,7 +85,7 @@ items:
           - string
   - uid: excel.Excel.Interfaces.SlicerUpdateData.nameInFormula
     summary: |-
-      表示公式中使用的名称。
+      表示公式中使用切片器名称。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -117,7 +117,7 @@ items:
           - Excel.SlicerSortType | "DataSourceOrder" | "Ascending" | "Descending"
   - uid: excel.Excel.Interfaces.SlicerUpdateData.style
     summary: |-
-      表示切片器样式的常量值。 可能的值为：SlicerStyleLight1 through SlicerStyleLight6、TableStyleOther1 through TableStyleOther2、 SlicerStyleDark1 through SlicerStyleDark6。 还可以指定工作簿中显示的用户定义的自定义样式。
+      表示切片器样式的常量值。 可能的值为: "SlicerStyleLight1" 到 "SlicerStyleLight6"、"TableStyleOther1" 通过 "TableStyleOther2"、"SlicerStyleDark1" 到 "SlicerStyleDark6"。 还可以指定工作簿中显示的用户定义的自定义样式。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
