--- a/docs/docs-ref-autogen/excel/excel.slicer.yml
+++ b/docs/docs-ref-autogen/excel/excel.slicer.yml
@@ -415,7 +415,7 @@ items:
           - Excel.SlicerSortType | "DataSourceOrder" | "Ascending" | "Descending"
   - uid: excel.Excel.Slicer.style
     summary: |-
-      表示切片器样式的常量值。 可能的值为：SlicerStyleLight1 through SlicerStyleLight6、TableStyleOther1 through TableStyleOther2、 SlicerStyleDark1 through SlicerStyleDark6。 还可以指定工作簿中显示的用户定义的自定义样式。
+      表示切片器样式的常量值。 可能的值为: "SlicerStyleLight1" 到 "SlicerStyleLight6"、"TableStyleOther1" 通过 "TableStyleOther2"、"SlicerStyleDark1" 到 "SlicerStyleDark6"。 还可以指定工作簿中显示的用户定义的自定义样式。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
